# smart-2fa-secure

./: LICENSE  README.md  pyproject.toml
data/requirements/: develop_requirements.txt
smart_2fa_secure/: __init__.py  core.py  exceptions.py  interfaces.py
smart_2fa_secure/backends/: __init__.py  redis.py  telegram.py
tests/: conftest.py  test_core.py  test_redis_backend.py  test_senders.py
tests/unit/: __init__.py  test_core.py  test_exceptions.py
tests/unit/integrations/: __init__.py  test_integrations.py
tests/unit/test_backends/: test_redis.py  test_telegram.py
